Fixed navigation bar on mobile
- Only needs animation

--- a/src/styles/primevue-base/_mixins.scss
+++ b/src/styles/primevue-base/_mixins.scss
@@ -201,6 +201,7 @@
                 background: $menuitemHoverBg;
 
                 .p-menuitem-link {
+                    padding: $mobilemenuitemPadding;
                     .p-menuitem-text {
                         color: $menuitemTextHoverColor;
                         transition: $listItemTransition;
@@ -216,6 +217,193 @@
     }
 }
 
+@mixin mobilemenuitem {
+    > .p-menuitem-content {
+        color: $menuitemTextColor;
+        transition: $listItemTransition;
+        border-radius: $menuitemBorderRadius;
+
+        .p-menuitem-link {
+            color: $menuitemTextColor;
+            padding: $mobilemenuitemPadding;
+            user-select: none;
+
+            .p-menuitem-text {
+                color: $menuitemTextColor;
+                font-family: $fontFamily;
+                font-weight: 500;
+            }
+
+            .p-menuitem-icon {
+                color: $menuitemIconColor;
+                margin-right: $inlineSpacing;
+            }
+
+            .p-submenu-icon {
+                color: $menuitemIconColor;
+            }
+        }
+
+    }
+
+    &.p-highlight {
+        > .p-menuitem-content {
+            color: $menuitemTextActiveColor;
+            background: $menuitemActiveBg;
+
+            .p-menuitem-link {
+                padding: $mobilemenuitemPadding;
+                .p-menuitem-text {
+                    color: $menuitemTextActiveColor;
+                }
+
+                .p-menuitem-icon, .p-submenu-icon, .pi {
+                    color: $menuitemIconActiveColor;
+                }
+            }
+        }
+
+        &.p-focus {
+            > .p-menuitem-content {
+                background: transparent;
+            }
+        }
+    }
+
+    &:not(.p-highlight):not(.p-disabled) {
+        &.p-focus {
+            > .p-menuitem-content {
+                color: $menuitemTextFocusColor;
+                background: transparent;
+
+                .p-menuitem-link {
+                    color: $menuitemTextFocusColor;
+                    padding: $mobilemenuitemPadding;
+
+                    .p-menuitem-text {
+                        color: $menuitemTextFocusColor;
+                    }
+
+                    .p-menuitem-icon, .p-submenu-icon, .pi {
+                        color: $menuitemIconFocusColor;
+                    }
+                }
+            }
+        }
+
+        > .p-menuitem-content {
+            &:hover {
+                color: $menuitemTextHoverColor;
+                background: transparent;
+
+                .p-menuitem-link {
+                    .p-menuitem-text {
+                        color: $menuitemTextHoverColor;
+                        transition: $listItemTransition;
+                    }
+
+                    .p-menuitem-icon, .p-submenu-icon, .pi {
+                        color: $menuitemIconHoverColor;
+                        transition: $listItemTransition;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@mixin mobilesubmenuitem {
+     .p-menuitem-content {
+        color: $submenuTextColor;
+        transition: $listItemTransition;
+        border-radius: $menuitemBorderRadius;
+
+        .p-menuitem-link {
+            color: $submenuitemTextColor;
+            padding: $mobilesubmenuitemPadding !important;
+            user-select: none;
+
+            .p-menuitem-text {
+                color: $submenuitemTextColor;
+                font-family: $fontFamily;
+                font-weight: 500;
+
+            }
+
+            .p-menuitem-icon {
+                color: $submenuitemIconColor;
+                margin-right: $inlineSpacing;
+            }
+
+            .p-submenu-icon {
+                color: $submenuitemIconColor;
+            }
+        }
+    }
+
+    &.p-highlight {
+        > .p-menuitem-content {
+            color: $submenuitemTextActiveColor;
+            background: $submenuitemActiveBg;
+
+            .p-menuitem-link {
+                padding: $mobilemenuitemPadding;
+                .p-menuitem-text {
+                    color: $submenuitemTextActiveColor;
+                }
+
+                .p-menuitem-icon, .p-submenu-icon, .pi {
+                    color: $submenuitemIconActiveColor;
+                }
+            }
+        }
+
+        &.p-focus {
+            > .p-menuitem-content {
+                background: $submenuitemActiveFocusBg;
+            }
+        }
+    }
+
+    &:not(.p-highlight):not(.p-disabled) {
+        &.p-focus {
+            > .p-menuitem-content {
+                color: $submenuitemTextFocusColor;
+
+                .p-menuitem-link {
+                    color: $submenuitemTextFocusColor;
+                    padding: $mobilemenuitemPadding;
+                    .p-menuitem-text {
+                        color: $submenuitemTextFocusColor;
+                    }
+
+                    .p-menuitem-icon, .p-submenu-icon, .pi {
+                        color: $submenuitemIconFocusColor;
+                    }
+                }
+            }
+        }
+
+        > .p-menuitem-content {
+            &:hover {
+                color: $submenuitemTextHoverColor;
+
+                .p-menuitem-link {
+                    padding: $mobilemenuitemPadding;
+                    .p-menuitem-text {
+                        color: $submenuitemTextHoverColor;
+                        transition: $listItemTransition;
+                    }
+
+                    .p-menuitem-icon, .p-submenu-icon, .pi {
+                        color: $submenuitemIconHoverColor;
+                        transition: $listItemTransition;
+                    }
+                }
+            }
+        }
+    }
+}
 @mixin horizontal-rootmenuitem {
     > .p-menuitem-content {
         color: $horizontalMenuRootMenuitemTextColor;
